crates/alder-can/src/snapshots/alder_can__module__tests__ambiguous_binop.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Basics exposing (..)\n\nimport MyMath exposing (..)\n\nx a b = a + b\n"
---
[
    AmbiguousBinop {
        region: Region {
            start: Position {
                line: 7,
                column: 11,
            },
            end: Position {
                line: 7,
                column: 12,
            },
        },
        name: "+",
        first_module: ModuleName {
            package: None,
            name: "Basics",
        },
        other_modules: [
            ModuleName {
                package: None,
                name: "MyMath",
            },
        ],
    },
]
