crates/alder-can/src/snapshots/alder_can__module__tests__ambiguous_ctor_in_expr.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nimport Option exposing (Option(..))\n\nx = Just\n"
---
[
    AmbiguousCtor {
        region: Region {
            start: Position {
                line: 7,
                column: 5,
            },
            end: Position {
                line: 7,
                column: 9,
            },
        },
        prefix: None,
        name: "Just",
        first_module: ModuleName {
            package: None,
            name: "Maybe",
        },
        other_modules: [
            ModuleName {
                package: None,
                name: "Option",
            },
        ],
    },
]
